This this the changelog file for the Pothos GUI toolkit.

Release 0.1.1 (pending)
==========================

- Filled in the implementation for Graph Editor save all
- Prefix QtColorPicker library to avoid install collisions
- QDoubleSpinBox parameter entry locale support fix
- Fixed block ID update while editing

Release 0.1.0 (2014-12-21)
==========================

This is the first public release of the Pothos GUI toolkit.